# Darkay

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  particle.rs  physics.rs  prelude.rs
tests/: tv_basic.rs
tests/scripts/: tv_basic_plot.py
